--- a/css/main.css
+++ b/css/main.css
@@ -117,3 +117,96 @@ html,body{
     border-radius: 5px 0px 0px 5px;
 
 }
+.alt_container {
+    background: #7d4185;
+}
+.middle_part{
+	display: grid;
+	width: 1280px;
+	margin:0 auto;
+	grid-template-columns: 2fr 1fr;
+	grid-gap: 20px;
+	background: white;
+	padding: 10px;
+}
+.left_content{
+	background: red;
+	width: 100%;
+	height: 500px;
+}
+.right_content{
+	background: green;
+	width: 100%;
+	height: 500px;
+}
+.post_image {
+    position: relative;
+}
+.post_title{
+	display: grid;
+	width: 100%;
+	grid-template-columns: 2.5fr 0.5fr 0.5fr;
+	padding: 5px;
+}
+.post_desc {
+    background: #7d4185;
+    position: absolute;
+	bottom: -12.5%;
+	right: 0;
+	left: 18px;
+	width: 95%;
+}
+.post_title li{
+	list-style: none;
+}
+.post_title strong{
+    font-size: 200%;
+    color: #fff;
+    max-height: 62px;
+    display: block;
+    margin-bottom: 5px;
+    overflow: hidden;
+    font-family: "Segoe UI",Roboto;
+	font-weight: normal;
+}
+.post_title span{
+	font-size: 16px;
+    color: #fff;
+    max-height: 62px;
+    display: block;
+    margin-bottom: 5px;
+    overflow: hidden;
+    font-family: "Segoe UI",Roboto;
+	font-weight: normal;
+}
+.post_nav{
+	height: 100%;
+	text-align: center;
+	display: table;
+}
+.button_wrapper{
+	display: table-cell;
+	vertical-align: middle;
+}
+.button_wrapper button{
+	border:none;
+	width: 44px;
+	height: 44px;
+	font-size: 30px;
+	color: #7d4185;
+}
+.number_wrapper{
+	width: 10%;
+	float: right;
+	height: 100%;
+	text-align: center;
+	display: table;
+	margin-left: 25px;
+}
+.number_wrapper small{
+	color: #fff;
+	font-size: 28px;
+	display: table-cell;
+	vertical-align: middle;
+	font-family: "Segoe UI",Roboto;
+}
