--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,12 @@ html,body{
 	box-sizing: border-box;
 	margin: 0 auto;
 }
+
+.alt_container {
+    background: #7c2b24;
+}
+
+/*Navigation CSS*/
 .logo img{
     width: 40%;
     height: auto;
@@ -165,9 +171,9 @@ html,body{
     border-radius: 5px 0px 0px 5px;
 
 }
-.alt_container {
-    background: #7c2b24;
-}
+/*End Navigation CSS*/
+
+/*Top Slide CSS*/
 .middle_part{
 	display: grid;
 	width: 1280px;
@@ -180,15 +186,12 @@ html,body{
 .left_content{
 	/*background: red;*/
 	width: 100%;
-	height: 500px;
+	/*height: 500px;*/
 }
-.right_content{
-	background: green;
-	width: 100%;
-	height: 500px;
-}
+
 .post_image {
     position: relative;
+    margin-bottom: 60px;
 }
 .post_image img {
     width: 100%;
@@ -261,3 +264,109 @@ html,body{
 	vertical-align: middle;
 	font-family: "Segoe UI",Roboto;
 }
+/*End Top Slide CSS*/
+
+/*Middle CSS*/
+.music_posts ul{
+	display: grid;
+	width: 100%;
+	margin: 0 auto;
+	grid-template-columns: repeat(3, 1fr);
+	grid-gap: 10px;
+	padding:0px;
+}
+.music_posts ul li{
+	list-style: none;
+	color: #555;
+	font-family: "Segoe UI",Roboto;
+	font-weight: normal;
+	font-size: 17px;
+	word-wrap: break-word;
+	text-align: justify;
+}
+.music_posts ul li img{
+	width: 100%;
+	height: auto;
+}
+.music_content h2 {
+    background: #466aaa;
+    padding: 5px;
+    font-family: "Segoe UI",Roboto;
+	font-weight: normal;
+}
+.music_content h2 a{
+	text-decoration: none;
+	color: #fff;
+	vertical-align: super;
+}
+.music_content h2 i {
+    background: url('../img/bookmark.png') 0 0 no-repeat;
+    width: 24px;
+    height: 29px;
+    display: inline-block;
+}
+.music_posts strong{
+	color: #222;
+	margin-bottom: 10px;
+	font-family: "Segoe UI",Roboto;
+	font-weight: normal;
+	font-size: 20px;
+	word-wrap: break-word;
+	letter-spacing: 0px;
+}
+.music_posts a{
+	text-decoration: none;
+}
+/*End Middle CSS*/
+
+/*Right Sidebar CSS*/
+.right_content{
+	background: green;
+	width: 100%;
+	/*height: 500px;*/
+}
+/*End Right Sidebar CSS*/
+
+/*Footer CSS*/
+.footer_wrapper{
+	width: 1280px;
+	display: grid;
+	margin:0 auto;
+	grid-template-columns: repeat(4, 1fr);
+}
+footer {
+    background: #7c2b24;
+}
+.footer_wrapper{
+	color: #fff;
+}
+.footer_wrapper ul li{
+	margin-bottom: 10px;
+	font-family: "Segoe UI",Roboto;
+	font-weight: normal;
+	font-size: 20px;
+	word-wrap: break-word;
+	letter-spacing: 0px;
+	list-style: none;
+}
+.footer_wrapper h3{
+	font-family: "Segoe UI",Roboto;
+	font-weight: normal;
+	font-size: 23px;
+}
+.footer_wrapper ul{
+	padding: 0px;
+}
+.copyright{
+	width: 1280px;
+	display: grid;
+	margin:0 auto;
+}
+.copyright p{
+	color: #ff978e;
+	font-family: "Segoe UI",Roboto;
+	font-weight: normal;
+	font-size: 18px;
+	text-align: center;
+}
+/*End Footer CSS*/
