--- a/css/main.css
+++ b/css/main.css
@@ -52,6 +52,20 @@ html,body{
 .listen_live ul li{
 	display: inline;
 }
+.search{
+	display: grid;
+	width: 100%;
+	grid-template-columns: 2fr 1fr;
+	grid-gap: 5px;
+}
+.search button{
+	background: url(../img/search.png) 50% 50% no-repeat;
+	width: 36px;
+	height: 36px;
+	border: 0px;
+	float: right;
+	text-indent: -9999px;
+}
 .search_form{
 	background: #555;
 	float: left;
@@ -59,7 +73,7 @@ html,body{
 	box-shadow: 0 3px 0 rgba(0, 0, 0, 0.2);
 	position: relative;
 	padding: 10px;
-	width: 100%;
+	width: 93%;
 }
 .search_form input {
     padding: 10px;
@@ -92,6 +106,9 @@ html,body{
 .listen_live ul {
     margin-top: 50px;
     padding-left: 0px;
+}
+.weather{
+	background: url(../img/cloudy.png) 50px 0px no-repeat;
 }
 .container_input{
 	margin-bottom: 10px;
@@ -401,10 +418,15 @@ html,body{
 	background: #7c2b24;
 	color: white;
 }
-
+.now_playing{
+	font-family: "Segoe UI",Roboto;
+	font-weight: normal;
+	color: #555555;
+}
 .now_playing h2 {
     background: #466aaa;
     padding: 5px;
+    margin-bottom: 0px;
 }
 .now_playing a{
 	text-decoration: none;
@@ -419,6 +441,72 @@ html,body{
 	height: 29px;
 	display: inline-block;
 	padding-right: 10px;
+}
+.now_playing ul{
+	padding-left: 0px;
+	margin-top: 5px;
+}
+.now_playing li{
+	list-style: none;
+	border-bottom: 1px solid #7d271f42;
+	padding-bottom: 12px;
+}
+.now_playing li a{
+	color: #000;
+	float: right;
+	border: 1px solid #7c2b24;
+	border-radius: 2px;
+	font-size: 13px;
+	padding: 2px;
+}
+.play_now{
+	font-weight: bold !important;
+	margin-bottom: 2px;
+}
+.now_playing h3{
+	font-weight: normal;
+	margin-bottom: 2px;
+	margin-top: 2px;
+}
+.now_playing span{
+
+}
+.download{
+	background: #7d271f;
+	/*box-shadow: inset 0 -2px 0 rgba(0, 0, 0, 0.5);*/
+	color: #fff !important;
+	border: none;
+	/*padding-bottom: 6px;*/
+	border-radius: 2px;
+	padding: 3px;
+	font-size: 13px;
+}
+.now_playing a > i{
+	background: url(../img/download.png) 5px 0px no-repeat;
+	width: 16px;
+	height: 16px;
+	display: inline-block;
+}
+
+.right_top_ad{
+	text-align: center;
+}
+
+.social_links{
+	text-align: center;
+	padding: 10px;
+}
+.social_links h3{
+	font-family: "Segoe UI",Roboto;
+	font-weight: normal;
+}
+.social_links ul{
+	padding-left: 0px;
+}
+.social_links ul li{
+	list-style: none;
+	display: inline-block;
+	padding-right: 5px;
 }
 /*End Right Sidebar CSS*/
 
